fix: エラーハンドリングの方法を変更する
